kotlin/programming-kotlin_code/coroutines/output/UseCompute.output
UseCompute.kt:4:17: error: unresolved reference: Compute
  val compute = Compute()
                ^
Error: Could not find or load main class UseComputeKt
Caused by: java.lang.ClassNotFoundException: UseComputeKt
